--- a/LegalizaDomestica.Folha.Dominio/LegalizaDomestica.Folha.Dominio.csproj
+++ b/LegalizaDomestica.Folha.Dominio/LegalizaDomestica.Folha.Dominio.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\EfDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entidades\" />
@@ -83,6 +84,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
