--- a/LegalizaDomestica.Folha.Web/packages.config
+++ b/LegalizaDomestica.Folha.Web/packages.config
@@ -4,4 +4,6 @@
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="MySql.Data" version="6.9.6" targetFramework="net451" />
+  <package id="MySql.Data.Entity" version="6.9.6" targetFramework="net451" />
 </packages>
