--- a/LegalizaDomestica.Folha.Dominio/LegalizaDomestica.Folha.Dominio.csproj
+++ b/LegalizaDomestica.Folha.Dominio/LegalizaDomestica.Folha.Dominio.csproj
@@ -82,12 +82,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Pessoa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\EfDbContext.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entidades\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
